tests/error/ev.gw
// [contains] NullEventWait
Event @e;
e => now;
